log
Thu 16 May 2024 01:31:50 AM UTC: 
 tests:  0|5
total_score: 0/70
97679de
Thu 16 May 2024 01:52:44 AM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:19: error: unused variable ‘aux’ [-Werror=unused-variable]
   58 |             Node* aux=copy(n);
      |                   ^~~
cc1: all warnings being treated as errors
Compilation failed
119aaaf
Thu 16 May 2024 01:54:34 AM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:19: error: unused variable ‘aux’ [-Werror=unused-variable]
   64 |             Node* aux=copy(n);
      |                   ^~~
cc1: all warnings being treated as errors
Compilation failed
fce3fa7
Thu 16 May 2024 01:54:52 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:65:19: error: unused variable ‘aux’ [-Werror=unused-variable]
   65 |             Node* aux=copy(n);
      |                   ^~~
cc1: all warnings being treated as errors
Compilation failed
67fe0d2
Thu 16 May 2024 01:56:19 AM UTC: 
 sudoku.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
2f91da1
Thu 16 May 2024 02:02:17 AM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
3796cd3
Thu 16 May 2024 02:24:02 AM UTC: 
 sudoku.c | 38 ++++++++++++++++++++++++++++++++++++++
 1 file changed, 38 insertions(+)
 tests:  5|3
total_score: 35/70
80bb8b3
Thu 16 May 2024 02:30:30 AM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
56d4d63
Thu 16 May 2024 02:34:17 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|2
total_score: 45/70
f9c0726
Thu 16 May 2024 02:35:05 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 55/70
f06a04d
Thu 16 May 2024 02:35:47 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:128:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  128 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
c50a065
Thu 16 May 2024 02:36:20 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
9b3f67b
Thu 16 May 2024 07:41:51 PM UTC: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  10|0
total_score: 70/70
d23ee94
